--- a/UWPSoundBoard/MainPage.xaml
+++ b/UWPSoundBoard/MainPage.xaml
@@ -19,6 +19,12 @@
                     FontFamily="Segoe MDL2 Assets"
                     Click="HamburgerButton_Click"
                     RelativePanel.AlignLeftWithPanel="True"/>
+            <Button Content="&#xE0A6;"
+                    Name="BackButton"
+                    FontFamily="Segoe MDL2 Assets"
+                    Click="BackButton_Click"
+                    RelativePanel.RightOf="HamburgerButton"/>
+
 
         </RelativePanel>
 
