--- a/UWPSoundBoard/MainPage.xaml
+++ b/UWPSoundBoard/MainPage.xaml
@@ -24,9 +24,40 @@
                     FontFamily="Segoe MDL2 Assets"
                     Click="BackButton_Click"
                     RelativePanel.RightOf="HamburgerButton"/>
-
-
         </RelativePanel>
+        <SplitView Name="MySplitView"
+                   DisplayMode="CompactOverlay"
+                   CompactPaneLength="45"
+                   OpenPaneLength="200">
+            <SplitView.Pane>
+                <ListView Name="MenuItemsListView"
+                          IsItemClickEnabled="True"
+                          ItemClick="MenuItemsListView_Click"/>
+            </SplitView.Pane>
+            <SplitView.Content>
+                <Grid Margin="20,20,0,0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+
+                    <MediaElement Name="MyMediaElement" AutoPlay="True"/>
+
+                    <TextBlock Name="CategoryTextBlock" Text="All Sounds" FontSize="24"/>
+
+                    <GridView Grid.Row="1"
+                              Name="SoundGridView"
+                              SelectionMode="None"
+                              IsItemClickEnabled="True"
+                              
+                              ItemClick="SoundGridView_ItemClick">
+                                         
+                    </GridView>
+
+                </Grid>
+            </SplitView.Content>
+            
+        </SplitView>
 
     </Grid>
 </Page>
