--- a/UWPSoundBoard/MainPage.xaml
+++ b/UWPSoundBoard/MainPage.xaml
@@ -26,7 +26,7 @@
                     Click="BackButton_Click"
                     RelativePanel.RightOf="HamburgerButton"/>
         </RelativePanel>
-        <SplitView Name="MySplitView"
+        <SplitView Grid.Row="1" Name="MySplitView" 
                    DisplayMode="CompactOverlay"
                    CompactPaneLength="45"
                    OpenPaneLength="200">
@@ -54,7 +54,7 @@
                               ItemClick="SoundGridView_ItemClick">
                         <GridView.ItemTemplate>
                             <DataTemplate x:DataType="data:Sound">
-                                <Image Name="MyImage" Height="112" Width="101" Source="{x:Bind ImageFile}"/>
+                                <Image Name="MyImage" Height="112" Width="101" Source="{x:Bind ImageFile}" />
                             </DataTemplate>
                         </GridView.ItemTemplate>
                                        
